--- a/paginaicial.css
+++ b/paginaicial.css
@@ -7,7 +7,7 @@
     font-family: "Inter", sans-serif;
 }
 
-:root {
+:root{
     --fonte-: 1.2rem;
     --corDeFundo-: #292d2e;
     --TextoHeader-:#f6f6f6;
@@ -90,8 +90,6 @@ header{
     font-size: var(--fonte-);
     text-align: center;
     opacity: 0.6;
-    
-
 }
 
 .buttonStatus{
@@ -102,12 +100,16 @@ header{
     color: var(--TextoHeader-);
     font-size: var(--fonte-);
 }
+
 #ButtonStatusVermelho{
     background-color: #eb3939;
 }
+
 #ButtonStatusAmarelo{
     background-color:#ffa800 ;
-}#ButtonStatusVerde{
+}
+
+#ButtonStatusVerde{
     background-color:#00bf63 ;
 }
 
@@ -159,9 +161,16 @@ p{
 }
 
 #barraProgesso{
+    width: 100%;
+    height: 30px;
+    background: linear-gradient(to right, #0758f4, #01caff);
+    border-radius: 40px;
+}
+
+#barraDentro {
     width: 70%;
     height: 30px;
-   background: linear-gradient(to right, #0758f4, #01caff);
+    background-color: rgb(63, 63, 63);
     border-radius: 40px;
 }
 
