--- a/css/paginamudarSenha.css
+++ b/css/paginamudarSenha.css
@@ -1,24 +1,25 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Inter", sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
-:root{
+:root {
     --fonte-: 1.2rem;
     --corDeFundo-: #292d2e;
-    --TextoHeader-:#f6f6f6;
+    --TextoHeader-: #f6f6f6;
     --preto-: #000000;
 }
 
-body, html{
+body,
+html {
     background: linear-gradient(to left, #000000, var(--corDeFundo-), #000000);
     height: 100%;
-      overflow: hidden;   /* desativa scroll horizontal e vertical */
+    overflow: hidden; /* desativa scroll horizontal e vertical */
 }
 
-.conteudo_principal{
+.conteudo_principal {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -26,22 +27,23 @@ body, html{
     margin-top: 6rem;
     gap: 2.8rem;
     color: #f6f6f6;
-    letter-spacing:1px;
+    letter-spacing: 1px;
     font-size: 1.5rem;
 
 }
 
-.conteudo_principal p{
+.conteudo_principal p {
     margin-block-start: -2.8rem;
     opacity: 0.6;
-
 }
 
-h3, p, h1{
-        font-weight: 400;
+h3,
+p,
+h1 {
+    font-weight: 400;
 }
 
-#bt_altera_senha{
+#bt_altera_senha {
     background-color: #737373;
     border: none;
     border-radius: 24px;
@@ -50,13 +52,13 @@ h3, p, h1{
     color: #f6f6f6;
 }
 
-.principal_text_senhas{
+.principal_text_senhas {
     display: flex;
     width: 50%;
     justify-content: space-around;
 }
 
-.text_senhas{
+.text_senhas {
     width: 380px;
     height: 40px;
     color: wheat;
@@ -65,14 +67,14 @@ h3, p, h1{
     border-radius: 24px;
     border: none;
     padding: 20px;
-&::placeholder{
-    color: white;
-    font-weight: 600;
-    font-size: 1rem;
-}
+    &::placeholder {
+        color: white;
+        font-weight: 600;
+        font-size: 1rem;
+    }
 }
 
-#botao_voltar{
+#botao_voltar {
     background-color: #737373;
     border: none;
     border-radius: 24px;
@@ -80,4 +82,3 @@ h3, p, h1{
     font-size: 1.2rem;
     color: #f6f6f6;
 }
-
