--- a/css/projetoPagina.css
+++ b/css/projetoPagina.css
@@ -1,42 +1,76 @@
 @import url('https://fonts.googleapis.com/css2?family=Gravitas+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Inter", sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
-:root{
+:root {
     --fonte-: 1.2rem;
     --corDeFundo-: #292d2e;
-    --TextoHeader-:#f6f6f6;
+    --TextoHeader-: #f6f6f6;
     --preto-: #000000;
 }
 
-
-body, html{
-    background-color: var(--corDeFundo-);
+body,
+html {
+    background: linear-gradient(to bottom,var(--corDeFundo-) , #000000);
     height: 100%;
+    overflow: hidden;
 }
 
-h1{
+h1 {
     color: white;
-    font-weight: 400;
+    font-weight: 600;
     letter-spacing: 0.1rem;
+
 }
 
-.header__principal{
+.fa-house {
+    padding: 25px 40px;
+    font-size: 2rem;
+    color: white;
+    cursor: pointer;
+}
+.header__principal {
     display: flex;
     flex-direction: column;
     text-align: center;
     justify-content: center;
     align-items: center;
     gap: 10px;
-    padding: 80px 0px;
+    padding: 10px 0px;
 }
 
-#barraProgresso{
+.texto__emcima_da_barra {
+    display: flex;
+    gap: 25px;
+}
+
+#botao__renomear {
+    color: white;
+    background-color: #ffb001;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+#id_nomeProjeto {
+    width: 400px;
+    height: 40px;
+    border-radius: 15px;
+    border: none;
+    color: white;
+    font-size: 1.2rem;
+    padding-left: 20px;
+    background-color: var(--corDeFundo-);
+}
+#barraProgresso {
     display: flex;
     justify-self: center;
     align-items: center;
@@ -46,7 +80,7 @@ h1{
     border-radius: 50px;
     overflow: hidden;
 
-    & h3{
+    & h3 {
         position: absolute;
         transform: translateX(160px);
         color: white;
@@ -54,73 +88,122 @@ h1{
     }
 }
 
-#progresso{
-    background: linear-gradient(to right, #f45507, #ffb001); 
+#progresso {
+    background: linear-gradient(to right, #f45507, #ffb001);
     height: 100%;
     width: 100%;
 }
 
-.div__main-projetos{
+.div__main-projetos {
     width: 400px;
-    background-color: #d9d9d9;
+    background:linear-gradient(to bottom, #d9d9d9,rgb(179, 163, 163));
     border-radius: 11px;
     display: flex;
     flex-direction: column;
     padding: 20px;
+    max-height: 38.8rem; /* ou a altura que você quiser */
+    overflow-y: auto; /* só scroll vertical */
+    overflow-x: hidden; /* esconde scroll horizontal */
     gap: 10px;
+    flex-shrink: 0;
 }
 
-.main__principal{
-    padding: 10px 17rem;
-    gap: 10px;
-    display: grid;
-    grid-template-rows: auto auto;
-    grid-template-columns: 1fr 1fr 1fr; 
+/* largura da barra */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* trilho da barra */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+}
+
+/* parte que desliza */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 25px;
+}
+
+/* hover na parte que desliza */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+.main__principal {
+    padding: 10px 5rem;
+    gap: 20px;
+    display: flex;
     align-items: start;
+    overflow-y: hidden;
+    overflow-x: auto;
 }
 
-.main__botao{
+.main__botao {
     background: linear-gradient(to right, #f45507, #ffb001);
     color: var(--TextoHeader-);
     font-size: var(--fonte-);
     border: none;
     border-radius: 12px;
     padding: 10px 40px;
-    margin-left: 17rem;
+    margin-left: 5rem;
+    margin-bottom: 15px;
     font-weight: bolder;
 }
 
-.input__texto{
+.input__texto {
     border: none;
     text-align: center;
     color: black;
     height: 42px;
     border-radius: 10px;
     font-size: 1.3rem;
+      min-height: 42px;
 }
 
-.botao__main_projetos{
+.botao__main_projetos {
     background-color: #00bf63;
     border: none;
     width: 40%;
     height: 40px;
-    color: #d9d9d9;
+    color: #f6f6f6;
     font-size: 1rem;
     border-radius: 11px;
-    
+    min-height: 35px;
 }
-.botao__main_projetos-dentro{
+.botao__main_projetos-dentro {
     background-color: #00bf63;
     border: none;
-    font-size: 1rem;
+    color: white;
+    padding: 11px;
     border-radius: 5px;
-    color:white;
-    padding: 0.1px 10px;
-    font-weight: bolder;
-    font-size: 2rem;
+    font-weight: 1200;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
-.input__texto-dentro{
+#botao__excluir_projetos-dentro {
+    color: #d9d9d9;
+    background-color: red;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#botao__excluir_projetos-dentro {
+    color: #d9d9d9;
+    background-color: red;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.input__texto-dentro {
     display: flex;
     flex: 1;
     outline: none;
@@ -129,31 +212,34 @@ h1{
     font-size: 1rem;
 }
 
-a{
+a {
     color: black;
 }
 
-.main__projetos-dentro{
+.main__projetos-dentro {
     background-color: white;
     display: flex;
     justify-content: space-between;
-    padding: 0px 10px;
-    height: 50px;
+    
+    padding: 5px;
     align-items: center;
     border-radius: 10px;
+    overflow: hidden;
+    gap: 10px;
+
 }
 
-.mains__projetos-dentro-2{
+.mains__projetos-dentro-2 {
     display: flex;
     flex: 1;
-    background-color: #b4b2b296 ;
+    background-color: #5f505096;
     padding: 10px;
     flex-direction: column;
     gap: 10px;
     border-radius: 10px;
 }
 
-.projeto__checkbox, .projeto__link, .projeto__imagem, .projeto__texto{
+.projeto__checkbox {
     display: flex;
     flex: 1;
     background-color: white;
@@ -162,6 +248,6 @@ a{
     gap: 10px;
 }
 
-.conteudo_checkbox{
-    transform: scale(1.5);    
+.conteudo_checkbox {
+    transform: scale(1.5);
 }
