--- a/css/projetoPagina.css
+++ b/css/projetoPagina.css
@@ -165,3 +165,46 @@ a{
 .conteudo_checkbox{
     transform: scale(1.5);    
 }
+
+.add__pessoas{
+    display: flex;
+    align-items: end;
+    margin: 2em;
+    padding: 4em;
+}
+
+#listaPessoas{
+    display: flex;
+    position: fixed;
+    right: 0;
+    margin: 50px 2em 0 0;
+    padding: 1.5em;
+    top: 0;
+    color: rgb(0, 0, 0);
+    background-color: white;
+    border-radius: 20px;
+}
+
+.add__pessoas__botao{
+    display: flex;
+    position: fixed;
+    right: 0;
+    margin: 180px 6em 0 0;
+    padding: 1.5em;
+    top: 0;
+
+    border-radius: 20px;
+    font-size: 14px;
+    font-weight: 700;
+    color: #f6f6f6;
+    background: linear-gradient(to right, #f45507, #ffb001);  
+}
+
+.input_nome{
+    display: flex;
+    position: fixed;
+    right: 0;
+    margin: 150px 4.5em 0 0;
+    top: 0;
+}
+
