--- a/css/paginainicialWhite.css
+++ b/css/paginainicialWhite.css
@@ -185,7 +185,6 @@ a{
     padding: 0 20px 10px 20px;
     display: flex;
     flex-direction: column; 
-    justify-content: space-around;
     transition: 0.3s;
     &:hover{
         transform: scale(1.02) translateY(-15px);
@@ -307,10 +306,9 @@ p{
 
 .cl_menuProjetos{
     display: none;
-    position: static;
+    position: absolute;
     width: 300px;
     flex-direction: column;
-    align-items: flex-start;
     color: white;
     padding: 20px;
     position: absolute;
