--- a/css/projetoPagina.css
+++ b/css/projetoPagina.css
@@ -89,6 +89,7 @@ h1 {
     height: 45px;
     border-radius: 50px;
     overflow: hidden;
+    position: relative;
 
     & h3 {
         position: absolute;
@@ -101,7 +102,6 @@ h1 {
 #progresso {
     background: linear-gradient(to right, #f45507, #ffb001);
     height: 100%;
-    width: 50%;
 }
 
 .div__main-projetos {
