Botão de compartilhados
Adicionado botão para filtrar por projetos compartilhados.

--- a/css/paginainicialWhite.css
+++ b/css/paginainicialWhite.css
@@ -161,6 +161,10 @@ a{
     background:linear-gradient(to right, #00bf63, #02b337);
 }
 
+#ButtonStatusAzul{
+    background:linear-gradient(to right, #01a2ff, #3b80ff);
+}
+
 /* fim botão e pesquisa */
 
 /* inicio projetos */
