--- a/css/Paginacalendario.css
+++ b/css/Paginacalendario.css
@@ -15,18 +15,28 @@
 }
 
 
-body, html{
-    background: linear-gradient(to top, #000000, var(--corDeFundo-));
-
-    overflow-y: none;   /* desativa scroll horizontal e vertical */
+body,
+html {
+    background: linear-gradient(to bottom,rgb(238, 238, 245), #d4def3);
     height: 100%;
+    overflow: hidden;
+}
+
+a{
+    color: rgb(49, 50, 56);
+}
+
+.fa-house {
+    padding: 25px 40px;
+    font-size: 2rem;
+    color: rgb(29, 31, 41);
+    cursor: pointer;
 }
 
 #iconeHeader{
     width: 100px;
 }
 hr{
-    color: white;
     width: 95%;
     display: flex;
     align-items: center;
@@ -68,12 +78,10 @@ header{
         cursor: pointer;
     }
 }
+
 a{
     text-decoration: none;
-    color: #f6f6f6;
 }
-
-
 
 .pesquisa{
     width: 450px;
@@ -105,16 +113,20 @@ a{
 
 .fa-solid{
     font-size: 42px;
-    color: white;
 }
 
 .botoes{
     padding: 15px 80px;
     border-radius: 10px;
-    color: white;
     background-color:#848484;
+    opacity: 0.7;
     border: none;
     font-size: 1rem;
+    font-weight: 600;
+    &:hover{
+        opacity: 1;
+        cursor: pointer;
+    }
 }
 
 .secao_botoes{
@@ -125,7 +137,6 @@ a{
 }
 
 #h1__principal{
-    color: white;
     font-size: 2.5rem;
     text-align: center;
     padding: 45px;
@@ -140,13 +151,11 @@ a{
     align-items: start;
     overflow-y: hidden;
     overflow-x: auto;
-    
-
 }
 
 .corpo__tarefas{
    width: 400px;
-    background:linear-gradient(to bottom, #d9d9d9,rgb(179, 163, 163));
+    background:linear-gradient(to bottom, #e6e3e3,rgb(210, 208, 208));
     border-radius: 11px;
     display: flex;
     flex-direction: column;
@@ -160,7 +169,6 @@ a{
 }
 
 .nome__projeto_calendario{
-
     background-color: white;
     height: fit-content;
     display: flex;
@@ -178,11 +186,69 @@ a{
     border-radius: 5px;
     gap: 10px;
     justify-content: space-between;
+}
 
+.active{
+    opacity: 0.6;
+}
+
+.fa-bars{
+    font-size: 42px;
+    color: gray;
+}
+
+#menuLateral{
+    display: none;
+    width: 300px;
+    flex-direction: column;
+    align-items: flex-start;
+    color: white;
+    padding: 20px;
+    position: absolute;
+    right: 0;
+    background-color: rgb(243, 243, 253);
+    border-radius: 10px;
+    box-shadow: 0 0 50px rgb(175, 170, 196);
+    margin: 10px;
+    & ul{
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+        gap: 20px;
+        width: 100%;
+        & i{
+            color: #292d2e;
+        }
+        & li{
+            padding: 10px 20px;
+            width: 100%;
+            border-radius: 10px;
+        }
+        & li:hover{
+            cursor: pointer;
+            background-color: rgb(237, 237, 245);
+            & i{
+                color: rgb(255, 123, 0);
+            }
+            &{
+                color: rgb(255, 123, 0);
+                font-weight: 600;
+            }
+        }
+        & .fa-solid{
+            font-size: 1.5rem;
+        }
     }
+}
+
+#headerLogo a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .pai__projeto_checkbox{
-       display: flex;
+    display: flex;
     flex: 1;
     background-color: #a6a6a6;
     padding: 10px;
